--- a/src/main/java/lapr4/blue/s1/lang/n1140956/ConditionalFormatting/ui/CondFormDialog.form
+++ b/src/main/java/lapr4/blue/s1/lang/n1140956/ConditionalFormatting/ui/CondFormDialog.form
@@ -71,9 +71,9 @@
                   <Component id="btnFalse" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace pref="15" max="32767" attributes="0"/>
               <Component id="btnOK" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="24" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
